# critical_thinking

./: .gitignore  README.md
axum-api/: Cargo.toml
axum-api/src/: main.rs
axum-api/src/entity/: user.rs
vue-ui/: components.d.ts  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
vue-ui/src/: App.vue  main.js  main.ts  style.css
vue-ui/src/components/: HelloWorld.vue
vue-ui/src/router/: index.ts
vue-ui/src/views/: login.vue  pdf.vue  reg.vue
